add live map tile in background as opposed to static image

--- a/css/BasemapToggle.css
+++ b/css/BasemapToggle.css
@@ -1,3 +1,9 @@
+.BasemapToggle .internalmap {
+    width: 75px;
+    height: 75px;
+    curor: pointer;
+}
+
 .BasemapToggle .toggleButton {
     padding: 1px;
     background: #fff;
